# ai_examples

./: .gitignore  README.md
An_LLM_Query_Understanding_Service/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
An_LLM_Query_Understanding_Service/llm_query_understand/: cache.py  llm.py  main.py
FidelityGenerativeAI/LightweightFineTuning/: LightweightFineTuning-with-full-dataset.ipynb  LightweightFineTuning-with-small-dataset.ipynb
FidelityGenerativeAINanoDegree/01_LightweightFineTuning/: LightweightFineTuning-with-full-dataset.ipynb
FidelityGenerativeAINanoDegree/Course3_LargeLanguageModels_and_TextGeneration/: course3.md
FidelityGenerativeAINanoDegree/project02_ChatBot_With_RAG/: chatbot.py  requirements.txt
FidelityGenerativeAINanoDegree/project02_OpenAI_Chatbot_with_RAG/: README.md  chatbot.py
GenAINanoDegree/: project3_fetch_data.txt  project3hints.txt  project3plan.md
GenAINanoDegree/project02_OpenAI_Chatbot_with_RAG/: .env  README.md  chatbot.py  requirements.txt
GenAINanoDegree/project03_Building_A_Domain_Expert_Model/: project3_fetch_data.md
MCP_Agentic_AI_Crash_Course_With_Python/: .env.example  .gitignore  .windsurfrules  README.md  main.py  pyproject.toml  requirements.txt  test_weather.py
MCP_Agentic_AI_Crash_Course_With_Python/server/: weather.py
Scrape_the_web_agentically_with_Firecrawl_and_LangGraph/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
agents/: README.md
(+18 files in other folders)
